--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,7 +3,7 @@ pipeline {
 	
 	stages {
 		stage ('compile stage') {
-			step {
+			steps {
 				withMaven(maven : 'maven_3.6.0') {
 					sh 'mvn clean compile'
 				}
@@ -11,7 +11,7 @@ pipeline {
 		}
 		
 		stage ('Unit Testing stage') {
-			step {
+			steps {
 				withMaven(maven : 'maven_3.6.0') {
 					sh 'mvn test'
 				}
@@ -19,7 +19,7 @@ pipeline {
 		}
 		
 		stage ('Static Code Analysis stage') {
-			step {
+			steps {
 				withMaven(maven : 'maven_3.6.0') {
 					sh 'mvn sonar:sonar'
 				}
@@ -28,13 +28,13 @@ pipeline {
 		
 		stage ('Manual Code Review stage') {
 		
-			step {
+			steps {
 				input('Does the code review successful?')
 			}
 		}
 		
 		stage ('QA Deployment stage') {
-			step {
+			steps {
 				withMaven(maven : 'maven_3.6.0') {
 					sh 'mvn deploy'
 				}
