--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,11 +1,19 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven 3.6.0'
-        jdk 'jdk8'
+        maven 'maven 3'
+        jdk 'java 8'
     }
     stages {
 	
+	stage ("initialize") {
+		steps {
+			sh '''
+			echo "PATH = ${PATH}"
+			echo "M2_HOME = ${M2_HOME}"
+			'''
+		}
+	}
         stage ('Build') {
             steps {
                 bat 'mvn -Dmaven.test.failure.ignore=true install' 
