--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        maven 'maven 3'
+        maven 'maven_3.6.0'
         jdk 'java 8'
     }
     stages {
