--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,23 +6,11 @@ pipeline {
     }
     stages {
 	
-	stage ("initialize") {
-		steps {
-			sh '''
-			echo "PATH = ${PATH}"
-			echo "M2_HOME = ${M2_HOME}"
-			'''
-		}
-	}
-        stage ('Build') {
+	stage ('Build') {
             steps {
-                bat 'mvn -Dmaven.test.failure.ignore=true install' 
+                bat 'mvn clean install' 
             }
-            post {
-                success {
-                    junit 'target/surefire-reports/**/*.xml' 
-                }
-            }
+            
         }
     }
 }
